--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@
           <h3 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h3>
 
 	  <li>
-	    <a href="iouthwaite.github.io/index.md">Home</a>
-	    <a href="iouthwaite.github.io/About.md">About</a>
+	    <a href="/index.md">Home</a>
+	    <a href="/About.md">About</a>
 	  </li>
 	  
 
