trying to fix links still

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <header class="inner">
 	  <h1>
             <a href="/" class="logo">
-              <img src="/assets/iouthwaite_headshot.png" width="50" height="50" alt="headshot">
+              <img align="left" src="/assets/iouthwaite_headshot.png" width="50" height="50" alt="headshot">
             </a>
 	  </h1>
 
@@ -26,8 +26,9 @@
           <h3 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h3>
 
 	  <li>
-	    <a href="/index.md">Home</a>
-	    <a href="/About.md">About</a>
+	    [a relative link]
+	    <a href="https://iouthwaite.github.io/index.md">Home</a>
+	    <a href="https://iouthwaite.github.io/About.md">About</a>
 	  </li>
 	  
 
