--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,15 +17,14 @@
     <div id="header_wrap" class="outer">
       <header class="inner">
 	<a href="/" class="logo">
-          <img align="left" src="/assets/iouthwaite_headshot.png" width="50" height="50" alt="headshot">
+          <img align="right" src="/assets/iouthwaite_headshot.png" width="100" height="100" alt="headshot">
 	</a>
           <h2 id="project_title">{{ site.title | default: site.github.repository_name }}</h2>
           <h3 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h3>
 
 	  <li>
-	    [a relative link]
 	    <a href="https://iouthwaite.github.io/index.md">Home</a>
-	    <a href="https://iouthwaite.github.io/About.md">About</a>
+	    <a href="https://iouthwaite.github.io/about.md">About</a>
 	  </li>
 	  
 
