trying this way

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
           <h3 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h3>
 
 	  <li>
-	    <a href="https://iouthwaite.github.io/index.md">Home</a>
-	    <a href="https://iouthwaite.github.io/about.md">About</a>
+	    <a href=".">Home</a>
+	    <a href="about">About</a>
 	  </li>
 	  
 
