--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="{{ site.lang | default: "en-US" }}">
 
   <head>
+    <base href="{{site.baseurl}}">
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
@@ -23,8 +24,8 @@
           <h3 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h3>
 
 	  <li>
-	    <a href=".">Home</a>
-	    <a href="about">About</a>
+	    <a href="index.md">Home</a>
+	    <a href="about.md">About</a>
 	  </li>
 	  
 
