--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,14 +18,14 @@
     <div id="header_wrap" class="outer">
       <header class="inner">
 	<a href="/" class="logo">
-          <img align="right" src="/assets/iouthwaite_headshot.png" width="100" height="100" alt="headshot">
+          <img align="right" src="/assets/iouthwaite_headshot.png" width="150" height="150" alt="headshot">
 	</a>
           <h2 id="project_title">{{ site.title | default: site.github.repository_name }}</h2>
           <h3 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h3>
 
 	  <li>
-	    <a href="index.md">Home</a>
-	    <a href="about.md">About</a>
+	    <a href="https://iouthwaite.github.io/index">Home</a>
+	    <a href="https://iouthwaite.github.io/about">About</a>
 	  </li>
 	  
 
