--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 
 	  <li>
 	    <a href="https://iouthwaite.github.io/index">Home</a>
-	    <a href="https://iouthwaite.github.io/about">About</a>
+	    <a href="https://iouthwaite.github.io/about.html">About</a>
 	  </li>
 	  
 
