--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
           <h3 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h3>
 
 	  <li>
-	    <a href="/">Home</a>
-	    <a href="/about.html">About</a>
+	    <a href="/">home</a>
+	    <a href="/about">about</a>
 	  </li>
 	  
 
