--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,13 +24,10 @@
           <h3 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h3>
 
 	  <li>
-	    <a href="/">Home</a>
-	    <p> *** </p>
-	    <a href="/About">About</a>
-	    <p> *** </p>
-	    <a href="/Projects">Projects</a>
-	    <p> *** </p>
-	    <a href="/Contact">Contact</a>
+	    <a href="/">Home</a> | 
+	    <a href="/About">About</a> | 
+	    <a href="/Projects">Projects</a> | 
+	    <a href="/Contact">Contact</a> | 
 	  </li>
 	  
 
