--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,18 @@
 
 {% seo %}
     {% include head-custom.html %}
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W6YD4RH9G">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7W6YD4RH9G');
+    </script>
+    
   </head>
 
   <body>
